--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,6 @@
 {
   "SECRET_KEY": "請填入一組隨機字串",
+  "ACCESS_CODE": "你的通行碼（建議設定以提升安全性）",
   "OPENAI_API_KEY": "你的 OpenAI API 金鑰",
   "TELEGRAM_BOT_TOKEN": "你的 Telegram Bot Token（如需通知功能）",
   "TELEGRAM_CHAT_ID": "你的 Telegram Chat ID（如需通知功能）",
