--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+# GPU加速套件 (需要NVIDIA GPU和CUDA支援)
+# 安裝CUDA版本PyTorch: pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu121
+torch>=2.0.0
+torchaudio>=2.0.0
+
+# Web框架
 Flask>=2.3.3
 Flask-SocketIO>=5.3.6
 python-dotenv>=1.0.0
 eventlet>=0.33.3
+
+# AI和媒體處理
 faster-whisper>=0.9.0
-torch>=2.0.0
 yt-dlp>=2023.10.13
 openai>=1.3.0
+
+# 工具套件
 requests>=2.31.0
 feedparser>=6.0.10
