--- a/config.example.json
+++ b/config.example.json
@@ -63,5 +63,7 @@
   "_comment_other": "=== 其他配置 ===",
   "TELEGRAM_BOT_TOKEN": "你的 Telegram Bot Token（如需通知功能）",
   "TELEGRAM_CHAT_ID": "你的 Telegram Chat ID（如需通知功能）",
-  "SERVER_PORT": 5000
+  "SERVER_PORT": 5000,
+  "USE_SSL": false,
+  "_comment_ssl": "💡 SSL 配置說明：設定 USE_SSL 為 true 並將憑證檔案放在 certs/ 目錄下（cert.pem 和 key.pem）"
 }
