refactor: Restructure project with dedicated services directory
This commit introduces a significant refactoring of the project'si
structure to enhance modularity, maintainability, and adherence to
better software engineering principles.

Key changes include:

    - Service Module Relocation: Core service-related Python modules
        (e.g., `ai_summary_service.py`, `queue_worker.py`, `socketio_instance.py`,
        `whisper_manager.py`) have been moved from the project root into a
        new, dedicated `src/services/` directory. This centralizes service
        definitions and improves separation of concerns.

    - Task Processing Encapsulation: A new module, `src/services/task_processor.py`,
        has been introduced to encapsulate the specific logic for processing
        different task types (e.g., YouTube downloads, media uploads). This
        further breaks down responsibilities within the task management system.

    - Configuration and Dependency Updates:
        - `app.py` has been updated to reflect the new import paths for relocated
            service modules and to integrate the new `TaskProcessor`.
        - `config.example.json` and `requirements.txt` have been adjusted to
            accommodate any new configurations or dependencies introduced by the refactoring.
        - Various existing service files within `src/services/` (e.g., `auth_service.py`,
            `bookmark_service.py`) have been updated to align with the new structure
            and potentially minor internal adjustments.

    - TaskQueue Configuration Improvement (Fix): The `task_queue.py` module
        has been refactored to resolve a `NameError` in its constructor. The
       `TaskQueue` class now accepts an optional `config_getter` callable,
        defaulting to `get_config`, which improves dependency injection and
        makes the class more robust and testable. This change is integral to
        the overall structural improvements.

Overall, this refactoring aims to 

--- a/config.example.json
+++ b/config.example.json
@@ -65,5 +65,17 @@
   "TELEGRAM_CHAT_ID": "你的 Telegram Chat ID（如需通知功能）",
   "SERVER_PORT": 5000,
   "USE_SSL": false,
-  "_comment_ssl": "💡 SSL 配置說明：設定 USE_SSL 為 true 並將憑證檔案放在 certs/ 目錄下（cert.pem 和 key.pem）"
+  "_comment_ssl": "💡 SSL 配置說明：設定 USE_SSL 為 true 並將憑證檔案放在 certs/ 目錄下（cert.pem 和 key.pem）",
+
+  "_comment_paths": "=== 路徑配置 ===",
+  "PATHS": {
+    "DOWNLOADS_DIR": "downloads",
+    "SUBTITLES_DIR": "subtitles",
+    "SUMMARIES_DIR": "summaries",
+    "TASKS_DIR": "tasks",
+    "UPLOADS_DIR": "uploads",
+    "LOGS_DIR": "logs",
+    "CERTS_DIR": "certs",
+    "TRASH_DIR": "trash"
+  }
 }
