--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,17 @@
-# GPU加速套件 (需要NVIDIA GPU和CUDA支援)
-# 安裝CUDA版本PyTorch: pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu121
 torch>=2.0.0
 torchaudio>=2.0.0
 
-# Web框架
 Flask>=2.3.3
 Flask-SocketIO>=5.3.6
 python-dotenv>=1.0.0
 eventlet>=0.33.3
 
-# AI和媒體處理
 faster-whisper>=0.9.0
 yt-dlp>=2023.10.13
 openai>=1.3.0
 
-# 多 AI 提供商支援 (可選，根據需要安裝)
-# anthropic>=0.3.0         # Claude API 支援
-# google-generativeai>=0.3.0  # Gemini API 支援 (若使用 Google SDK)
-# 注意：Gemini 可直接使用 OpenAI 兼容格式，無需額外套件
 
-# 工具套件
 requests>=2.31.0
 feedparser>=6.0.10
+
+pytest>=7.0.0
