--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-dotenv>=1.0.0
 eventlet>=0.33.3
 
 faster-whisper>=0.9.0
+mlx-whisper>=0.1.0; platform_system == "Darwin"
 yt-dlp>=2023.10.13
 openai>=1.100.0
 
